RESOLVED FIXED315367
webRequest events not firing with tabs.create
https://bugs.webkit.org/show_bug.cgi?id=315367
Summary webRequest events not firing with tabs.create
Carlos J.
Reported 2026-05-22 11:01:07 PDT
The following webRequest events are not fired when pages are created with tabs.create: onBeforeRequest onBeforeSendHeaders onSendHeaders onHeadersReceived onResponseStarted Webkit only fires: onCompleted If a user navigates to the URL normally, all events do fire as expected. Demo extension: https://jeurissen.co/webext-demos/webrequest-tabs-create
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-22 11:01:14 PDT
Elijah Sawyers
Comment 2 2026-09-02 16:03:41 PDT
EWS
Comment 3 2026-09-03 09:11:14 PDT
Committed 320430@main (7acdcf23cf0c): <https://commits.webkit.org/320430@main> Reviewed commits have been landed. Closing PR #73094 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.